# Boks-bot

./: README.md  db.sql  pyproject.toml
python_books/: books.py  bot.py  config.py  message_texts.py
